This is a summary of the changes in KTIGCC since the first alpha release:

KTIGCC 20060814 beta:

Improvements:
* Kate's automatic indentation (ENTER indents the new line
  the same as the old one) is now enabled.
* The syntax highlighting descriptions are now
  automatically regenerated if they are missing or out of
  date.
* Tab now reliably inserts a tab. Use Ctrl+I to indent the
  selection (or the current line). (The other Kate defaults
  were also changed to match TIGCC IDE more closely.)
* Implemented coding template popups.
* Implemented "Find symbol declaration".
* Implemented Ctrl+Tab to switch between source files. As
  Ctrl+Tab is taken up by the default KDE shortcut
  settings, Ctrl+G can also be used.
* Implemented completion on Ctrl+Space. As Ctrl+Space
  conflicts with X input methods, Ctrl+M can also be used.
* Implemented prototype tooltips on opening a parenthesis.
* Because of conflicts (Ctrl+F9 is reserved by KDE for
  virtual desktop switching, Ctrl+Alt+F9 and
  Shift+Ctrl+Alt+F9 by X.Org X11 for virtual console
  switching), F8 can now be used instead of Ctrl+F9. So F8
  is Make and Alt+F8 is Compile. The Ctrl+F9 and
  Ctrl+Alt+F9 combos are also supported if they reach
  KTIGCC.
* Implemented the Shift+Ctrl+Alt+F9 (or Alt+Shift+F8, as
  per the above - note that you may have to press Alt first
  to get the combo recognized) combo (undocumented in TIGCC
  IDE) to switch transfer targets (TiEmu or real
  calculator) without going through the preferences.

Bugfixes:
* "New folder" wasn't always selecting the new folder for
  renaming. (Same for new files.)
* Fixed file descriptor leak in loadFileText.
* Opening the documentation could cause compilation and
  parsing (ctags) to lockup waiting for the external
  process (due to a conflict between Qt's and KDE's child
  process abstractions).

Notes:
* Debian (and derivate) users no longer need qt3-apps-dev
  to build KTIGCC.
* The KTIGCC RPM now requires ktigcc-completion-data, which