@@ -181,7 +181,8 @@ module.doc.type=
 module.doc.files=\
 	COPYING\
 	images/copyright.txt\
-	INSTALL
+	INSTALL\
+	NEWS
 
 module.po.files=
 
