@@ -180,6 +180,7 @@ void kurlNewFileName(KURL &dir,const QString &newFileName);
 int checkFileName(const QString &fileName,const QStringList &fileNameList);
 
 int copyFile(const char *src, const char *dest);
+bool moveFile(const QString &src, const QString &dest);
 int insertName(const char *src, const char *dest, const char *name);
 
 int getPathType(const QString &thePath);
