@@ -1,5 +1,12 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
+CVS HEAD:
+
+* Added NEWS file containing the history information previously published in the
+  changelog snippets on SourceForge.
+* Fixed moving files across file systems after compilation not working.
+
+
 KTIGCC 20060814 beta:
 
 Improvements:
